<resources>
    <string name="app_name">Welfare</string>
    <string name="activity_main_heading">Traders Welfare Board, Kerala</string>
    <string name="activity_main_button_edit_profile">Registration</string>
    <string name="activity_main_button_class_change">Apply for Class Change</string>
    <string name="activity_main_button_application_status">Application Status</string>
    <string name="activity_main_button_pension_status">Pension Status</string>
    <string name="activity_main_button_renew_membership">Renewal of Membership</string>
    <string name="activity_main_button_claim_status">Status</string>
    <string name="language_choice">Choose your Language</string>
    <string name="language_english">English</string>
    <string name="language_malayalam">Malayalam</string>
    <string name="activity_login_title">Login or Signup</string>
    <string name="activity_login_or">OR</string>
    <string name="activity_login_signup">Signup</string>
    <string name="activity_login_forgot_password">Forgot Password</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_name">Mobile</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_submit">Submit</string>
    <string name="activity_signup_title">Signup</string>
    <string name="activity_signup_mobile_field">Mobile</string>
    <string name="activity_signup_password_field">Password</string>
    <string name="activity_signup_retype_password_field">Retype Password</string>
    <string name="activity_signup_otp_field">OTP</string>
    <string name="activity_signup_button_send_otp">Send OTP</string>
    <string name="activity_signup_submit">Submit</string>
    <string name="activity_lang_textview_language_choice">Choose your Language</string>
    <string name="activity_lang_button_language_english">English</string>
    <string name="activity_lang_button_language_malayalam">Malayalam</string>
    <string name="activity_personal_heading">Personal Details</string>
    <string name="activity_personal_name">Name</string>
    <string name="activity_personal_name_hint">Name</string>
    <string name="activity_personal_dob">Date of Birth</string>
    <string name="activity_personal_gender">Gender</string>
    <string name="activity_personal_address">Address</string>
    <string name="activity_personal_address_hint">Address</string>
    <string name="activity_personal_place">Place</string>
    <string name="activity_personal_place_hint">Place</string>
    <string name="activity_personal_district">District</string>
    <string name="activity_personal_district_hint">District</string>
    <string name="activity_personal_next">Next</string>
    <string name="activity_personal_details_choose_district">Choose District</string>
    <string name="activity_personal_details_choose_gender">Choose Gender</string>
    <string-array name="activity_personal_spinner_gender">
        <item>Choose Gender</item>
        <item>MALE</item>
        <item>FEMALE</item>
        <item>OTHER</item>
    </string-array>
    <string name="activity_personal_textview_dob">dd-mm-yyyy</string>
    <string-array name="activity_personal_spinner_district">
        
        <item>Kasaragod</item>
        <item>Kannur</item>
        <item>Wayanad</item>
        <item>Kozhikode</item>
        <item>Malappuram</item>
        <item>Palakkad</item>
        <item>Thrissur</item>
        <item>Ernakulam</item>
        <item>Idukki</item>
        <item>Kottayam</item>
        <item>Alappuzha</item>
        <item>Pathanamthitta</item>
        <item>Kollam</item>
        <item>Thiruvananthapuram</item>
    </string-array>
    <string name="activity_family_details_heading">Family Details</string>
    <string name="activity_family_details_add_member">Add Member</string>
    <string name="activity_family_details_name">Name: </string>
    <string name="activity_family_details_age">Age: </string>
    <string name="activity_family_details_gender">Gender: </string>
    <string name="activity_family_details_occupation">Occupation: </string>
    <string name="activity_family_details_relationship">Relationship: </string>
    <string name="activity_family_details_member_added">Member Added</string>
    <string name="activity_family_details_name_value">Name: %1$s</string>
    <string name="activity_family_details_age_value">Age: %1$d</string>
    <string name="activity_family_details_gender_value">Gender: %1$s</string>
    <string name="activity_family_details_occupation_value">Occupation: %1$s</string>
    <string name="activity_family_details_relationship_value">Relationship: %1$s</string>
    <string name="dialog_fragment_family_details_heading">Fill Details</string>
    <string-array name="dialog_fragment_family_spinner_gender">
        <item>Choose Gender</item>
        <item>MALE</item>
        <item>FEMALE</item>
        <item>OTHER</item>
    </string-array>
    <string name="activity_trading_details_heading">Trading Details</string>
    <string name="activity_trading_details_name">Name of Trading Firm</string>
    <string name="activity_trading_details_name_hint">Name of Trading Firm</string>
    <string name="activity_trading_details_address">Address of Trading Firm</string>
    <string name="activity_trading_details_turnover">Annual Turnover</string>
    <string name="activity_trading_details_subheading">Main Trading Place</string>
    <string name="activity_trading_details_address_branch">Branch</string>
    <string name="activity_trading_details_address_godown">Godown</string>
    <string name="activity_trading_details_address_factory">Factory</string>
    <string name="activity_trading_details_address_others">Others</string>
    <string name="activity_trading_details_address_hint">Address</string>
    <string name="activity_trading_details_ownership">Nature of Ownership</string>
    <string name="activity_trading_details_capital">Capital Contribution</string>
    <string name="activity_trading_details_gstn">GSTN and Date</string>
    <string name="activity_trading_details_license_number">License Number</string>
    <string name="activity_trading_details_licensing_authority">Licensing Authority</string>
    <string name="activity_trading_details_auth_name">Name of Authority</string>
    <string name="activity_trading_details_button_next">Next</string>
    <string name="activity_trading_details_official_authority">Name of Official Authority</string>
    <string name="activity_trading_details_spinner_ownership_prompt">Nature of Ownership</string>
    <string name="activity_trading_details_spinner_authority_prompt">Authority</string>
    <string name="activity_trading_details_ownership_type">Type of Ownership</string>
    <string-array name="activity_trading_details_spinner_ownership">
        <item>Type of Ownership</item>
        <item>Single owner</item>
        <item>Partnership</item>
        <item>Self help group</item>
        <item>Other</item>
    </string-array>
    <string-array name="activity_trading_details_spinner_authority">
        <item>Name of Official Authority</item>
        <item>State GST Rules</item>
        <item>Panchayat</item>
        <item>Municipality</item>
        <item>Corporation</item>
    </string-array>
    <string name="activity_bank_details_heading">Banking Details</string>
    <string name="activity_bank_details_bankname">Bank Name</string>
    <string name="activity_bank_details_account">Account Number</string>
    <string name="activity_bank_details_owner">Name of a/c holder</string>
    <string name="activity_bank_details_branch">Bank Branch</string>
    <string name="activity_bank_details_ifsc">IFSC Code</string>
    <string name="activity_bank_details_save">Save</string>
    <string name="activity_bank_details_change">Change</string>
    <string name="activity_renew_membership_title">Renew Membership</string>
    <string name="activity_renew_membership_annual">Annual Fees</string>
    <string name="activity_renew_membership_class">Class Fees</string>
    <string name="activity_renew_membership_total">Total</string>
    <string name="activity_renew_membership_pay">Pay using Netbanking</string>
    <string name="activity_renew_membership_from_database">From Database</string>
    <string name="activity_forgot_password_title">Forgot Password</string>
    <string name="activity_forgot_password_mobile_field">Mobile</string>
    <string name="activity_forgot_password_otp_field">OTP</string>
    <string name="activity_forgot_password_password_field">Password</string>
    <string name="activity_forgot_password_retype_password_field">Retype Password</string>
    <string name="activity_forgot_password_send_otp">Send OTP</string>
    <string name="activity_forgot_password_change_login">Change Password and Login</string>
    <string name="sendotp_key">219212Ahay2KSML5b17f2fe</string>
    <string name="activity_class_change_heading">Class Change</string>
    <string name="activity_classchange_title">Class Change</string>
    <string name="activity_classchange_old_income">Current Annual Turnover</string>
    <string name="activity_classchange_old_class">Current Class</string>
    <string name="activity_classchange_name">New Annual Turnover</string>
    <string name="activity_classchange_submit">Submit</string>
    <string name="activity_classchange_class">New Class</string>
    <string name="activity_class_change_null_turnover">No Turnover data</string>
    <string name="activity_class_change_null_class">Cannot be determined</string>
    <string name="activity_other_details_location">Location</string>
    <string name="activity_other_details_rupees">Rs.</string>
    <string name="user_details_button_next">NEXT</string>
    <string name="activity_other_details_heading">Other Details</string>
    <string name="activity_other_details_own_building">If firm operates in own building:</string>
    <string name="activity_other_details_market_value">Expected Market Value</string>
    <string name="activity_other_details_own_building_main_branch">Main Branch</string>
    <string name="activity_other_details_own_building_branch">Branch</string>
    <string name="activity_other_details_own_building_godown">Godown</string>
    <string name="activity_other_details_own_building_factory">Factory</string>
    <string name="activity_other_details_own_building_others">Others</string>
    <string name="activity_other_details_rented_building">If firm operates in rented building:</string>
    <string name="activity_other_details_rent_amount">Annual Rent Amount</string>
    <string name="activity_other_details_rented_building_main_branch">Main Branch</string>
    <string name="activity_other_details_rented_building_branch">Branch</string>
    <string name="activity_other_details_rented_building_godown">Godown</string>
    <string name="activity_other_details_rented_building_factory">Factory</string>
    <string name="activity_other_details_rented_building_other">Other</string>
    <string name="activity_other_details_other_terms">Other Terms &amp; Condtitions if any</string>
    <string name="activity_other_details_other_terms_main_branch">Main Branch</string>
    <string name="activity_other_details_other_terms_branch">Branch</string>
    <string name="activity_other_details_other_terms_godown">Godown</string>
    <string name="activity_other_details_other_terms_factory">Factory</string>
    <string name="activity_other_details_organization">If member of any traders organization, specify the name of the organization:</string>
    <string name="activity_other_details_organization_hint">Organisation Name</string>
    <string name="activity_other_details_family_details">Family Details:</string>
    <string name="activity_other_details_family_name">Name</string>
    <string name="activity_other_details_age">Age</string>
    <string name="dialog_fragment_family_details_button_add">Add</string>
    <string name="dialog_fragment_family_details_button_cancel">Cancel</string>
</resources>