<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/family_details_card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/activity_family_details_card_view_height"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_margin="8dp"
    android:elevation="3dp"
    app:cardCornerRadius="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp">

        <TextView
            android:id="@+id/text_view_family_member_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="3dp"
            android:layout_margin="3dp"
            android:text="@string/activity_family_details_name"
            android:textSize="@dimen/activity_family_details_rows_text_size"
            android:textColor="@color/colorEditText" />

        <View style="@style/HorizontalDividerLineThin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_view_family_member_age"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:gravity="center_vertical"
                android:text="@string/activity_family_details_age"
                android:textSize="@dimen/activity_family_details_rows_text_size"
                android:textColor="@color/colorEditText" />

            <TextView
                android:id="@+id/text_view_family_member_gender"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:gravity="center_vertical"
                android:text="@string/activity_family_details_gender"
                android:textSize="@dimen/activity_family_details_rows_text_size"
                android:textColor="@color/colorEditText" />

        </LinearLayout>

        <View style="@style/HorizontalDividerLineThin" />

        <TextView
            android:id="@+id/text_view_family_member_occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_vertical"
            android:text="@string/activity_family_details_occupation"
            android:textSize="@dimen/activity_family_details_rows_text_size"
            android:textColor="@color/colorEditText" />

        <View style="@style/HorizontalDividerLineThin" />

        <TextView
            android:id="@+id/text_view_family_member_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_vertical"
            android:text="@string/activity_family_details_relationship"
            android:textSize="@dimen/activity_family_details_rows_text_size"
            android:textColor="@color/colorEditText" />

        <View style="@style/HorizontalDividerLineThin" />

    </LinearLayout>

</android.support.v7.widget.CardView>

