<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_family_member_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapCharacters"
            android:hint="@string/activity_family_details_name"
            android:textSize="@dimen/dialog_fragment_add_family_member_text_size"
            android:textColor="@color/colorEditText" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_family_member_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/activity_family_details_age"
                android:textSize="@dimen/dialog_fragment_add_family_member_text_size"
                android:textColor="@color/colorEditText" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_family_details_gender_select"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_family_member_occupation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapCharacters"
            android:hint="@string/activity_family_details_occupation"
            android:textSize="@dimen/dialog_fragment_add_family_member_text_size"
            android:textColor="@color/colorEditText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_family_member_relationship"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapCharacters"
            android:hint="@string/activity_family_details_relationship"
            android:textSize="@dimen/dialog_fragment_add_family_member_text_size"
            android:textColor="@color/colorEditText" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="@integer/user_details_weight_sum">

        <Button
            android:id="@+id/dialog_fragment_family_details_button_add"
            android:layout_width="0dp"
            style=""
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorAccent"
            android:text="@string/dialog_fragment_family_details_button_add"
            android:textSize="@dimen/user_details_text_size"/>

        <Button
            android:id="@+id/dialog_fragment_family_details_button_cancel"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="5dp"
            android:text="@string/dialog_fragment_family_details_button_cancel"
            android:textSize="@dimen/user_details_text_size"/>

    </LinearLayout>

</LinearLayout>

